engagement spacing fixes

--- a/src/components/Engagement/Engagement.module.css
+++ b/src/components/Engagement/Engagement.module.css
@@ -2,7 +2,7 @@
   grid-column: 1 / 3;
   color: var(--tweet-card-primary);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   max-width: 20em;
   font-size: 1.1em;
@@ -32,7 +32,7 @@
   position: relative;
   width: 1.1em;
   height: 1.1em;
-  margin: 0 0.4em;
+  margin-right: 0.4em;
   padding: 0.4em;
   border-radius: 50%;
 }
